fix flex wrap in procedure

--- a/app/assets/stylesheets/pages/_procedure.scss
+++ b/app/assets/stylesheets/pages/_procedure.scss
@@ -8,7 +8,7 @@
     font-size: 9px;
     font-weight: 700;
     letter-spacing: 1px;
-    line-height: 5px;
+    line-height: 15px;
   }
 }
 .procedure-title {
@@ -27,12 +27,22 @@
 .procedure-icons {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
   padding-bottom: 5px;
 }
+.procedure-icon {
+  width: 120px;
+  padding: 0 6px;
+}
 .procedure-frame {
-  width: 420px;
-  height: 540px;
+  @media (max-width: 468px) {
+    width: 100%;
+    margin: 25px 0;
+  }
+  @media (min-width: 768px) {
+    width: 420px;
+    height: 540px;
+  }
   padding: 40px;
   display: flex;
   flex-direction: column;
@@ -61,6 +71,7 @@
   }
 
 }
+
 
 
 
